--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bibash</groupId>
-	<artifactId>CanteenProject</artifactId>
+	<artifactId>Matchella</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>CanteenProject</name>
-	<description>college canteen project for Spring Boot</description>
+	<name>Matchella</name>
+	<description>Match making system</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -50,10 +50,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-websocket</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 			<exclusions>
@@ -80,6 +76,13 @@
 			<artifactId>spring-security-oauth2</artifactId>
 			<version>2.3.2.RELEASE</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
