--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 server.port=8777
 spring.application.name=CanteenProject
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/canteen
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 
+
+app.text.key= 32
+app.text.salt= 32
