--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8777
 spring.application.name=Matchella
+spring.profiles.active=dev
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
@@ -11,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 app.text.key= 32
 app.text.salt= 32
+jwt.secret = newBew
+jwt.expirationDateInMs=3000000
+jwt.refreshExpirationDateInMs =9000000
